Fri Mar  8 20:27:36 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/ImplRepo_Service/Shared_Backing_Store.cpp:
        * utils/logWalker/Invocation.h:
        * utils/logWalker/Invocation.cpp:

          Fix warning on size_t.

Fri Mar  8 20:06:15 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * bin/tao_other_tests.lst:

          Dont run the servers_list test in single threaded configuration.

        * orbsvcs/tests/ImplRepo/servers_list/servers_list.mpc:

          Don't build servers_list in a single threaded configuration.

        * tests/Dynamic_TP/Config_Loader/Config_Loader.mpc:
        * tests/Dynamic_TP/ORB_ThreadPool/ORB_ThreadPool.mpc:
        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Dynamic/Dynamic_TP_POA_Test_Dynamic.mpc:

          Don't build Dynamic_TP tests in a single threaded configuration.

Fri Mar  8 16:13:18 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/tests/FT_Naming/FaultTolerant/FaultTolerant.mpc:

          Added dependency on idl generation to prevent parallel compile
          from failing.

Fri Mar  8 14:56:14 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/tests/ImplRepo/RestartServer/RestartServer.mpc:
        * bin/tao_other_tests.lst:

          Dont run ImplRepo RestartServer test in single threaded builds.

        * orbsvcs/ImplRepo_Service/Config_Backing_Store.h:
        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        * orbsvcs/ImplRepo_Service/Shared_Backing_Store.h:
        * orbsvcs/ImplRepo_Service/Shared_Backing_Store.cpp:
        * orbsvcs/ImplRepo_Service/XML_Backing_Store.h:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Manager.cpp:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Replication_Manager.cpp:
        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Server.cpp:
        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context_ReaderWriter.h:
        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group_Storable.cpp: